[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ocmoss"
version = "1.0.0"
description = "Observe, Control, Monitor Operating System SDK for Windows."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

authors = [
    {name = "Shreyas"}
]

dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["ocmoss*"]